# physoce-datasets

./: .gitignore  README.md  datasets.py  pyproject.toml  test.ipynb
download/: __init__.py  eke.py  era5.py
src/physoce_datasets/: __init__.py  cli.py  logging.py
src/physoce_datasets/download/: __init__.py  eke.py  era5.py
